fix(component-category-list): links fail a11y contrast checks in dark mode

--- a/material.angular.io/material.angular.io/material.angular.io/material.angular.io/material.angular.io/src/app/pages/component-category-list/_component-category-list-theme.scss
+++ b/material.angular.io/material.angular.io/material.angular.io/material.angular.io/material.angular.io/src/app/pages/component-category-list/_component-category-list-theme.scss
@@ -8,7 +8,7 @@
   $nav-background-opacity: if($is-dark-theme, 0.2, 0.03);
 
   .docs-component-category-list-summary a {
-    color: mat-color($primary, default);
+    color: mat-color($primary, if($is-dark-theme, 200, default));
   }
 
   .docs-component-category-list-card-summary {
